Revision history for Ixchel

0.5.0   2024-01-17/
		 - add snmp_install action
		 - add sneck_install install
		 - action pkgs, add in results reporting at the end of the action

0.4.0   2024-01-16/17:00
		 - ENV handling for proxy stuff and and cpanm home has moved to Ixchel->action to make handling easier
		 - variables defined under .env are now transfered to %ENV by Ixchel->action
		 - perl action, print results at the end
		 - misc POD fixes
		 - add sneck_config action and sneck template
		 - add some missing tests
		 - fix suricata_diff
		 - suricata include/outputs file name update
		 - fix missing items in the manifest
		 - suricata_extract extend now depends on suricata for snmp_v2 template
		 - perl action, don't treat failure on optional packages as a error if they can later be installed via cpanm
		 - perl_module_via_pkg function, add handling for LWP/libwww given the nonstandard naming

0.3.0   2024-01-09/23:00
		 - add suricata-update support to auto_cron
		 - the template action will now die when template errors instead of returning blank
		 - add action snmp_v2
		 - more minor POD stuff

0.2.2   2024-01-08/23:45
		 - POD fix for actions

0.2.1   2024-01-08/23:30
		 - auto_cron, fix writing file out
		 - auto_cron template, compress the results for smart
		 - snmp_v2 template, compress the zfs return
		 - auto_cron template, fix mdadm
		 - default config, add distro snmp extend with default enabled
		 - snmp_v2 template, fix sneck extend

0.2.0   2024-01-08/14:00
		 - Fix the Ixchel config not being available as config for xeno_build.
		 - add -r for the xeno action
		 - convert to Pod::Usage and no longer use the method help
		 - sagan_rules massive re-work... now updates the file from a specified base file
		 - Various cleanup to make exec status lines for xeno_build more readable.
		 - Lots of changes/fixes for Suricata.
		 - Now uses TOML::Tiny.