@@ -4,6 +4,7 @@ Revision history for Ixchel
 		 - add snmp_install action
 		 - add sneck_install install
 		 - action pkgs, add in results reporting at the end of the action
+		 - now set both lower and upper case proxy values
 
 0.4.0   2024-01-16/17:00
 		 - ENV handling for proxy stuff and and cpanm home has moved to Ixchel->action to make handling easier
